--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.openui.runner</groupId>
+    <groupId>org.our</groupId>
     <artifactId>parent-OpenUIRunner</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -11,5 +11,6 @@
     </properties>
     <modules>
         <module>core</module>
+        <module>google-test</module>
     </modules>
 </project>
