--- a/google-test/pom.xml
+++ b/google-test/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.our.core</groupId>
             <artifactId>OpenUIRunner</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
 </project>
